# rfd-notify

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  Cargo.toml  Dockerfile  README.md  action.yml  previous_matches  pyproject.toml  renovate.json
.dependabot/: config.yml
.github/: dependabot.yml
.github/workflows/: black.yml  ci.yaml  ci.yml  docker.yml  pr.yml  pre-commit.yml  push-container.yml  pylint.yml  release.yml
examples/: config.toml  config.yaml  config.yml
github-action/: Dockerfile  entrypoint.sh
rfd_notify/: cli.py  config.py  constants.py  notifications.py  rfd.py
rfd_notify/models/: offer.py  post.py  topic.py
src/: config.rs  db.rs  mail.rs  main.rs  rfd.rs  send.rs
