[package]
name = "rfd-notify"
version = "0.2.0"
authors = ["Dave Gallant <davegallant@gmail.com>"]
edition = "2018"

[dependencies]
sendgrid = { version = "0.17.2", default-features = false, features = ["rustls", "blocking"] }
serde_derive = "1.0.112"
serde = "1.0.126"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "0.2", features = ["full"] }
serde_json = "1.0.66"
log = "0.4"
pretty_env_logger = "0.4.0"
regex = "1.5.4"
rust-crypto = "^0.2"
sled = "0.34.6"
clap = "2.33.3"
envconfig = "0.10.0"
envconfig_derive = "0.10.0"
serde_yaml = "0.8"

[dev-dependencies]
serial_test = "*"
