[package]
name = "rfd-notify"
version = "0.2.1"
authors = ["Dave Gallant <davegallant@gmail.com>"]
edition = "2018"

[dependencies]
sendgrid = { version = "0.17.4", default-features = false, features = ["rustls", "blocking"] }
serde_derive = "1.0.112"
serde = "1.0.135"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1.15", features = ["full"] }
serde_json = "1.0.68"
log = "0.4"
pretty_env_logger = "0.4.0"
regex = "1.5.4"
rust-crypto = "^0.2"
sled = "0.34.7"
clap = "2.34.0"
envconfig = "0.10.0"
envconfig_derive = "0.10.0"
serde_yaml = "0.8"

[dev-dependencies]
serial_test = "*"
