[package]
name = "rfd-notify"
version = "0.2.2"
authors = ["Dave Gallant <davegallant@gmail.com>"]
edition = "2018"

[dependencies]
sendgrid = { version = "0.18.1", default-features = false, features = ["rustls", "blocking"] }
serde_derive = "1.0.112"
serde = "1.0.137"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1.18", features = ["full"] }
serde_json = "1.0.86"
log = "0.4"
pretty_env_logger = "0.4.0"
regex = "1.5.6"
sled = "0.34.7"
clap = { version = "4.0.9", features = ["derive"] }
envconfig = "0.10.0"
envconfig_derive = "0.10.0"
serde_yaml = "0.9"
sha2 = "0.10.6"

[dev-dependencies]
serial_test = "*"
