[tool.poetry]
name = "rfd-notify"
version = "1.0.0"
description = "get notified of deals based on regex"
authors = ["Dave Gallant <dave.gallant@gmail.com>"]
readme = "README.md"
packages = [{include = "rfd_notify"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
pyyaml = "^6.0"
loguru = "^0.7.2"
apprise = "^1.7.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.3.0"
pylint = "^3.0.3"
rope = "^1.11.0"
mypy = "^1.8.0"
types-requests = "^2.31.0.20240106"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
